@@ -17,6 +17,7 @@
 # along with OpenQuake. If not, see <http://www.gnu.org/licenses/>.
 
 import time
+import operator
 import numpy
 
 from openquake.baselib.general import AccumDict
@@ -85,6 +86,10 @@ def compute_ruptures(sources, sitecol, gsims, monitor):
     return res
 
 
+class List(list):
+    """Trivial container returned by compute_losses"""
+
+
 def compute_losses(ssm, sitecol, assetcol, riskmodel,
                    imts, trunc_level, correl_model, min_iml, monitor):
     """
@@ -99,7 +104,7 @@ def compute_losses(ssm, sitecol, assetcol, riskmodel,
     :param correl_model: correlation model
     :param min_iml: vector of minimum intensities, one per IMT
     :param monitor: a Monitor instance
-    :returns: an AccumDict grp_id -> losses by taxonomy
+    :returns: a List containing the losses by taxonomy and some attributes
     """
     [grp] = ssm.src_groups
     [(grp_id, ruptures)] = compute_ruptures(
@@ -108,8 +113,12 @@ def compute_losses(ssm, sitecol, assetcol, riskmodel,
     ri = riskinput.RiskInputFromRuptures(
         DEFAULT_TRT, imts, sitecol, ruptures, trunc_level, correl_model,
         min_iml)
-    return AccumDict({grp_id: losses_by_taxonomy(
-        ri, riskmodel, rlzs_assoc, assetcol, monitor)})
+    res = List([losses_by_taxonomy(
+        ri, riskmodel, rlzs_assoc, assetcol, monitor)])
+    res.num_rlzs = len(rlzs_assoc.realizations)
+    res.sm_id = ssm.sm_id
+    res.num_events = len(ri.eids)
+    return res
 
 
 @base.calculators.add('ucerf_risk')
@@ -129,7 +138,8 @@ class UCERFRiskFastCalculator(EbriskCalculator):
     pre_execute = UCERFEventBasedCalculator.__dict__['pre_execute']
 
     def execute(self):
-        res = parallel.starmap(compute_losses, self.gen_args()).submit_all()
-        losses = sum(res, AccumDict())
-        self.save_data_transfer(res)
-        return losses
+        allres = parallel.starmap(compute_losses, self.gen_args()).submit_all()
+        num_events = self.save_results(
+            sorted(allres, key=operator.attrgetter('sm_id')))
+        self.save_data_transfer(allres)
+        return num_events
